# Bilayer_Soft_Robots_Sim

./: .gitignore  README.md
Example/Example_gripping/: CMakeLists.txt  README.md  option.txt
Example/Example_gripping/inputdata/: bendingInput.txt  coupleBend.txt  coupleEdge.txt  edgeInput.txt  nodesInput.txt
Example/Example_gripping/src/: elasticBendingForce.cpp  elasticPlate.cpp  elasticTwistingBound.cpp  elasticTwistingBound.h  setInput.cpp  world.cpp  world.h
examples/Example_crawling_type1/: CMakeLists.txt  option.txt
examples/Example_crawling_type1/inputdata/: bendingInput.txt  computeCoupleBend.m  computeElement.m  edgeInput.txt
examples/Example_crawling_type1/src/: elasticStretchingBound.cpp  externalContactForce.h
examples/Example_crawling_type2/: CMakeLists.txt  README.md
examples/Example_crawling_type2/inputdata/: computeCouple2d.m  coupleEdge.txt  mesh_2.m  mesh_3.m  mesh_4.m  nodesInput.txt
examples/Example_crawling_type2/src/: elasticPlate.cpp  externalContactForce.cpp  setInput.cpp  setInput.h  world.cpp  world.h
examples/Example_gripping/src/: elasticBendingBound.h  elasticTwistingForce.cpp  externalContactForceBody.cpp  externalContactForceBody.h  main.cpp
examples/Example_jumping/: .gitignore  CMakeLists.txt  option.txt
examples/Example_jumping/inputdata/: bendingInput.txt  computeCoupleBend2.m  coupleEdge.txt  edgeInput.txt  mesh_2.m  mesh_3.m  mesh_4.m  nodesInput.txt
examples/Example_jumping/src/: elasticBendingForce.cpp  elasticPlate.cpp  elasticPlate.h  externalContactForce.cpp  main.cpp  world.cpp
examples/Example_swimming/: option.txt
examples/Example_swimming/inputdata/: bendingInput.txt  computeBend.m  computeCouple.m  computeElement.m  coupleBend.txt  coupleEdge.txt  edgeInput.txt  mesh_1.m  nodesInput.txt
examples/Example_swimming/src/: dampingForce.cpp  dampingForce.h  elasticBendingBound.cpp  elasticPlate.cpp  elasticPlate.h  main.cpp  setInput.h  world.cpp  world.h
